core/tests/snapshots/mem2reg__mem2reg_1.snap
---
source: tests/mem2reg.rs
expression: module

---
source_filename = ""
target datalayout = ""
target triple = ""


define external dso_local default i32 @main() {
0:
    ret i32 357
}


