core/tests/snapshots/mem2reg__mem2reg_2.snap
---
source: core/tests/mem2reg.rs
assertion_line: 55
expression: module

---
source_filename = ""
target datalayout = ""
target triple = ""


define external dso_local default i32 @main() {
0:
    ret i32 5
}


