core/tests/snapshots/mem2reg__mem2reg_5.snap
---
source: tests/mem2reg.rs
expression: module

---
source_filename = ""
target datalayout = ""
target triple = ""


define external dso_local default i32 @main() {
0:
    br label %1
1:
    br label %3
2:
    br label %3
3:
    ret i32 2
}


